--- a/styles/codehike.css
+++ b/styles/codehike.css
@@ -1,5 +1,5 @@
 .ch-scrollycoding.ch-scrollycoding-with-preview {
-  --ch-scrollycoding-sticker-width: 45vw;
+  --ch-scrollycoding-sticker-width: 100%;
   --ch-scrollycoding-code-min-height: 40vh;
 }
 
@@ -7,6 +7,7 @@
   top: 2vh;
   height: 90vh;
   max-height: 90vh;
+  overflow: hidden;
 }
 
 .ch-scrollycoding.ch-scrollycoding-with-preview .ch-codegroup.not-prose {
@@ -20,4 +21,6 @@
 
 .ch-scrollycoding-content .ch-scrollycoding-step-content {
   min-height: 300px;
+  width: 45vw;
+  max-width: 45vw;
 }
