--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,3 +108,13 @@ main.mdx-render .toc-link-active {
 .overflow-auto {
   overflow: auto;
 }
+
+table > thead > tr {
+  border-bottom: 2px solid var(--ant-primary-8);
+}
+table > tbody > tr {
+  border-bottom: 1px solid var(--ant-primary-8);
+}
+table > tbody > tr > td {
+  padding: 5px;
+}
