--- a/styles/codehike.css
+++ b/styles/codehike.css
@@ -30,3 +30,13 @@
   border-radius: 4px;
   padding: 2px 3px;
 }
+
+.blog-layout > table > thead > tr {
+  border-bottom: 2px solid var(--ant-primary-8);
+}
+.blog-layout > table > tbody > tr {
+  border-bottom: 1px solid var(--ant-primary-8);
+}
+.blog-layout > table > tbody > tr > td {
+  padding: 5px;
+}
