--- a/styles/mdx-render.scss
+++ b/styles/mdx-render.scss
@@ -21,9 +21,13 @@
     border-bottom: 1px solid #40ad41;
     color: #40ad41;
   }
-  .toc > ol,
-  li,
-  menu {
-    padding-left: 10px;
+  .toc {
+    ol {
+      list-style-type: none;
+      padding-left: 10px;
+      li {
+        padding-left: 10px;
+      }
+    }
   }
 }
