--- a/src/Layout/DocLayout.module.scss
+++ b/src/Layout/DocLayout.module.scss
@@ -13,3 +13,29 @@
   height: 100%;
   width: 16vw;
 }
+
+.docLayoutMenu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  div {
+    width: 50vw;
+    height: 5vh;
+    margin: 0.3vh;
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+    font-size: 26px;
+    cursor: pointer;
+    font-family: fangsong;
+    font-weight: 500;
+    &:hover {
+      color: var(--ant-primary-6);
+    
+    }
+  }
+  
+}
