--- a/styles/codehike.scss
+++ b/styles/codehike.scss
@@ -30,9 +30,12 @@
   }
 }
 
+.framework-layout,
 .blog-layout {
   table {
+    width: 100%;
     thead {
+      width: 100%;
       tr {
         border-bottom: 2px solid var(--ant-primary-8);
       }
