--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,6 +6,7 @@ header.ant-layout-header.link-group {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  font-family: fangsong;
 
   .ant-btn {
     font-size: large;
