--- a/pages/fund/index.module.scss
+++ b/pages/fund/index.module.scss
@@ -6,10 +6,12 @@
 .Side {
   width: 25vw;
   height: 100%;
-  color: #aaddd5;
+  // color: #aaddd5;
   padding: 10px;
+  border-right: 1px solid #aaddd5;
 }
 .FundDetailMain {
   width: 100%;
+  padding: 0 5vw;
 }
 
