--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,6 +43,7 @@ body {
   width: 100vw;
   height: 100vh;
   font-size: 16px;
+  background-color: var(--background);
 }
 
 a {
@@ -52,16 +53,6 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
 
 #__next {
