--- a/styles/mdx-render.scss
+++ b/styles/mdx-render.scss
@@ -106,4 +106,12 @@
       left: 0;
     }
   }
+
+  .ch-scroll-coding-with-preview {
+    .ch-scrollycoding-content {
+      .ch-scrollycoding-step-content {
+        height: 100%;
+      }
+    }
+  }
 }
