--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -37,7 +37,9 @@ html[data-theme="dark"] , html.dark{
   --blockquote-color: #f2f5fc;
   --blockquote-bg: #435071;
 
-  
+  --tw-ring-offset-shadow: 0 0 #fff;
+  --tw-ring-shadow : 0 0 #fff;
+  --tw-shadow: 0 1px 3px 0 rgb(255 255 255/0.1),0 1px 2px -1px rgb(255 255 255/0.1);
 }
 
 body {
