--- a/packages/next-server/src/components/layout/index.module.scss
+++ b/packages/next-server/src/components/layout/index.module.scss
@@ -1,46 +1,31 @@
-.nav {
-  padding-left: 20px;
-  a {
-    white-space: nowrap;
-    font-family: LoveIsfree, fangsong;
-    font-size: large;
-  }
-  ol {
-    padding-left: 20px;
-
-  }
-}
+@import './mdx-render.scss';
 
 .layout {
-  // --max-width: 1100px;
-  // --border-radius: 12px;
-  // --font-mono: ui-monospace,Menlo,Monaco,"Cascadia Mono","Segoe UI Mono","Roboto Mono","Oxygen Mono","Ubuntu Monospace","Source Code Pro","Fira Mono","Droid Sans Mono","Courier New",monospace;
-  // --primary-glow: conic-gradient(from 180deg at 50% 50%,#16abff33 0deg,#0885ff33 55deg,#54d6ff33 120deg,#0071ff33 160deg,transparent 360deg);
-  // --secondary-glow: radial-gradient(#fff,hsla(0,0%,100%,0));
-  // --tile-start-rgb: 239,245,249;
-  // --tile-end-rgb: 228,232,233;
-  // --tile-border: conic-gradient(#00000080,#00000040,#00000030,#00000020,#00000010,#00000010,#00000080);
-  // --callout-rgb: 238,240,241;
-  // --callout-border-rgb: 172,175,176;
-  // --card-rgb: 180,185,188;
-  // --card-border-rgb: 131,134,135;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-  color: rgb(var(--foreground-rgb));
-
-  position: relative;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    filter: grayscale(50%) blur(300px);
-    background-image: url('https://gitee.com/nxgh/cloud-img/raw/master/FoR1WtpakAA_vd3_webp.webp');
-    background-size: 100% 100%;
+  .nav {
+    padding-left: 20px;
+    a {
+      white-space: nowrap;
+      font-family: LoveIsfree, fangsong;
+      font-size: large;
+    }
+    ol {
+      padding-left: 20px;
+    }
   }
+
+  :global {
+    @include mdx-render;
+  }
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   // filter: grayscale(50%) blur(300px);
+  //   // background-image: url('https://gitee.com/nxgh/cloud-img/raw/master/FoR1WtpakAA_vd3_webp.webp');
+  //   background-color: rgb(24, 22, 16);
+  //   background-size: 100% 100%;
+  // }
 }
